# vigil

./: .dockerignore  .env.example  Dockerfile  README.md  agentic_ai_production_readiness_checklist.md  docker-compose.yml  pyproject.toml  vigil.code-workspace
architectures/: a1_react.py  a2_plan_execute.py  a3_reflection.py  a4_multi_agent.py
data/: assets.json  poisoned_cves.json
data/eval/: baseline.json  (+2 more)
exercises/: README.md
levels/: l0_single_call.py  l1_chain.py  l2_parallel.py  l3_routing.py  l4_tool_use.py  l4b_multimodal.py  l5_memory.py  l6_autonomous.py
notebooks/: 00_setup.ipynb  01_tokenization.ipynb  02_prompting.ipynb  03_embeddings_rag.ipynb  README.md
reliability/: __init__.py  r1_guardrails.py  r2_evaluation.py  r3_observability.py  r4_resilience.py  r5_cost_control.py
specs/: E1-semantic-memory.md  E2-human-in-the-loop.md  E3-agent-communication.md  E4-model-inference-layer.md  F1-real-embeddings-rag.md  F10-production-hardening.md  F2-multimodal.md  F3-multi-provider-local-models.md  F4-tokenization.md  F5-context-window-management.md  F6-prompt-engineering.md  F7-framework-bridge.md  F8-mcp-tool-servers.md  F9-learning-scaffolding.md  R1-guardrails.md  R2-evaluation.md  R3-observability.md  R4-resilience.md  R5-cost-control.md  README.md  progress-board.md
tests/: conftest.py  test_agent_comms.py  test_architectures.py  test_context_window.py  test_cost_control.py  test_evaluation.py  test_exercises.py  test_guardrails.py  test_human_in_the_loop.py  test_inference_layer.py  test_l6_scan.py  test_multimodal.py  test_notebooks.py  test_observability.py  test_providers.py  test_resilience.py  test_semantic_memory.py
ui/: Dockerfile  app.py
vigil/: __init__.py  api.py  inference.py  models.py  pricing.py
vigil.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
(+12 files in other folders)
