[project]
name = "vigil"
version = "0.1.0"
description = "Autonomous CVE Intelligence & Remediation Agent — A GenAI Learning Project"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.30",
    "pydantic>=2.0",
    "httpx>=0.27",
    "rich>=13.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
api  = ["fastapi>=0.111", "uvicorn[standard]>=0.29", "asyncpg>=0.29"]
ui   = ["streamlit>=1.35", "httpx>=0.27"]
full = ["fastapi>=0.111", "uvicorn[standard]>=0.29", "asyncpg>=0.29", "streamlit>=1.35", "httpx>=0.27"]
dev  = ["pytest", "pytest-asyncio"]

[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["vigil*"]
